src/index.css
/* ... */
.storeCards button {
    background-color: #434834;
    border: none;
    border-radius: 0 0 15px 15px;
    width: 100%;
    margin: 0;
    font-weight: lighter;
    font-size: 0.8rem;
    padding: 5%;
}

.storeCards button:hover {
    background-color: #4b5239;
}

.storePage {
    background: white;
}

.storePage .banner {
    background-image: url("./images/store.png");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    color: white;
    width: 100%;
    padding: 10% 0;
    position: relative;
}

.storePage .search-container {
    flex-grow: 1;
    margin-right: 1rem;
}

.storePage .inputs {
    /* display: flex; */
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin: 2rem 4rem;
}

.storePage .inputs .filters {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-right: 5%;
    gap: 1rem;
}

/* About Page*/

/* header banner styling */

.about-us {
    background-image: url("./images/about-bg-1.png");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: space-evenly;
    text-align: center;
    padding: 30px;
}

.about h1 {
    color: #5C770B;
}

.about-us h1 {
    font-size: 1.5rem;
}

.about-us img {
    max-width: 40%;
    height: auto;
}


/* problem statement styling */
.about-problem-statement {
    background-color: #F2EDE1;
    padding: 5%;
}

.about-problem-statement p {
    font-family: 'Open Sans', sans-serif;
    font-size: 1rem;
    text-align: center;
    font-style: italic;
}

/* challenges today section */

.about-challenges {
    padding-bottom: 15px;
}

.about-challenges h1 {
    padding-top: 2%;
    padding-left: 2%;
}

.about-chal-cards {
    width: 31%;
    margin: 1%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    border-radius: 15px;
}

.about-chal-cards p {
    padding-top: 3%;
    text-align: center;
    font-size: .75rem;
}

.about-chal-cards img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 15px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);

}

.all-about-chal-cards {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

/* seattle pub utilities quote */

.about-quote {
    background-image: url("./images/about-bg-2.png");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    text-align: center;
    color: #5C770B;
    width: 100%;
    height: 100%;
    padding: 7% 3%;
}

.about-quote-quote {
    font-style: italic;
    text-align: left;
    color: #000000;
}

.about-quote-ref {
    text-align: right;
    font-weight: bold;
    color: #000000;
}

/* redefining style section */
.about-redef {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    padding: 2%;
}

.about-redef img {
    max-width: 40%;
    object-fit: cover;
    border-radius: 15px;
}

.for-about-redef-button {
    padding-left: 2%;
    max-width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.about-redef-content h2 {
    background-color: #EBC9E3;
    font-size: .5rem;
    display: flex;
    justify-content: center;
    font-weight: bold;
    border-radius: 15px;
    white-space: nowrap;
    padding: 1%;
}

.about-redef-content p {
    font-size: .5rem;
}

.for-about-redef-button button a {
    font-size: .5rem;
    color: white;
    padding: 0;
}

/* how we help section */
.about-help {
    padding: 2%;
    flex-direction: row;
}

.about-help-card-format {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.about-help img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
}

.about-help p {
    color: white;
    background-color: #434834;
    padding: 15px;
    text-align: center;
    border-bottom-left-radius: 15px;
    border-bottom-right-radius: 15px;
    font-weight: bold;
}

.about-help-cards {
    margin: 0 3%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    width: 40%;
    border-radius: 15px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}

.about-help-cards p {
    margin: 0px;
}

.about-help-cards-link {
    text-decoration: none;
}

.about-help-cards-link:hover .about-help-cards {
    filter: brightness(0.85);
} */

.video-container {
    position: relative;
    padding-bottom: 56.25%;
    /* 16:9 aspect ratio */
    height: 0;
    overflow: hidden;
    max-width: 100%;
    /* background: #000; */
    margin: 20px 0;
}

/* 
.youtube-video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
 */

/* Quiz */
.quiz-intro-container {
    position: relative;
    width: 100%;
    height: 80vh;
    margin: 2.5% 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

.top-banner,
.image-left,
.image-right,
.bottom-image {
    position: absolute;
    border-radius: 15px;
    overflow: hidden;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.top-banner {
    top: 5%;
    left: 5%;
    width: 200px;
    height: 200px;
    z-index: 2;
}

.top-banner img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.image-left {
    top: 52%;
    left: 10%;
    width: 250px;
    height: 280px;
    z-index: 1;
}

.image-left img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.image-right {
    top: 60%;
    left: 65%;
    width: 300px;
    height: 200px;
    z-index: 3;
}

.image-right img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    border-radius: 15px;
}
/* ... */

